service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 2443
